--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       MYSQL_PASS: openemr
       OE_USER: admin
       OE_PASS: pass
-      FLEX_REPOSITORY: https://github.com/openemr/openemr.git
+      FLEX_REPOSITORY: https://github.com/sredna43/openemr.git
       FLEX_REPOSITORY_BRANCH: master
       EASY_DEV_MODE: "yes"
     depends_on:
